--- a/coverage-report/com.learning.users.model/User.java.html
+++ b/coverage-report/com.learning.users.model/User.java.html
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="pt"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../jacoco-resources/report.css" type="text/css"/><link rel="shortcut icon" href="../jacoco-resources/report.gif" type="image/gif"/><title>User.java</title><link rel="stylesheet" href="../jacoco-resources/prettify.css" type="text/css"/><script type="text/javascript" src="../jacoco-resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=4;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../jacoco-sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">users</a> &gt; <a href="index.source.html" class="el_package">com.learning.users.model</a> &gt; <span class="el_source">User.java</span></div><h1>User.java</h1><pre class="source lang-java linenums">package com.learning.users.model;
 
-import jakarta.validation.constraints.Email;
-import jakarta.validation.constraints.Min;
-import jakarta.validation.constraints.Past;
-import jakarta.validation.constraints.Size;
+import jakarta.validation.constraints.*;
 import org.hibernate.validator.constraints.URL;
-
 import java.time.LocalDate;
 
-<span class="fc" id="L11">public class User {</span>
+<span class="fc" id="L7">public class User {</span>
 
     private int id;
 
+    @NotEmpty(message = &quot;Define valid name&quot;)
+    @NotBlank(message = &quot;Name cannot be blank&quot;)
     @Size(min = 3, max = 50, message = &quot;Name has to have between 3 and 50 characters.&quot;)
     private String name;
 
+    @NotEmpty(message = &quot;Define valid surname&quot;)
+    @NotBlank(message = &quot;Last name cannot be blank&quot;)
     @Size(min = 3, max = 50, message = &quot;Last name has to have between 3 and 50 characters.&quot;)
     private String lastName;
 
@@ -24,63 +24,68 @@ import java.time.LocalDate;
     @Past(message = &quot;Past date should be informed in this field.&quot;)
     private LocalDate dateOfBirth;
 
+    @NotBlank(message = &quot;One phone number has to be informed&quot;)
     @Size(min = 13, max = 16, message = &quot;Phone number should be in the format: +DDI DDD Phone Number&quot;)
     private String phone;
 
     @URL(message = &quot;The GitHub profile informed could not be verified as a valid one&quot;)
     private String gitHubProfile;
 
-<span class="fc" id="L33">    public int getId() { return id; }</span>
+    public int getId() {
+<span class="fc" id="L35">        return id;</span>
+    }
 
-<span class="fc" id="L35">    public void setId(int id) {this.id = id; }</span>
+    public void setId(int id) {
+<span class="fc" id="L39">        this.id = id;</span>
+<span class="fc" id="L40">    }</span>
 
     public String getName() {
-<span class="fc" id="L38">        return name;</span>
+<span class="fc" id="L43">        return name;</span>
     }
 
     public void setName(String name) {
-<span class="fc" id="L42">        this.name = name;</span>
-<span class="fc" id="L43">    }</span>
+<span class="fc" id="L47">        this.name = name;</span>
+<span class="fc" id="L48">    }</span>
 
     public String getLastName() {
-<span class="fc" id="L46">        return lastName;</span>
+<span class="fc" id="L51">        return lastName;</span>
     }
 
     public void setLastName(String lastName) {
-<span class="fc" id="L50">        this.lastName = lastName;</span>
-<span class="fc" id="L51">    }</span>
+<span class="fc" id="L55">        this.lastName = lastName;</span>
+<span class="fc" id="L56">    }</span>
 
     public String getEmail() {
-<span class="fc" id="L54">        return email;</span>
+<span class="fc" id="L59">        return email;</span>
     }
 
     public void setEmail(String email) {
-<span class="fc" id="L58">        this.email = email;</span>
-<span class="fc" id="L59">    }</span>
+<span class="fc" id="L63">        this.email = email;</span>
+<span class="fc" id="L64">    }</span>
 
     public LocalDate getDateOfBirth() {
-<span class="fc" id="L62">        return dateOfBirth;</span>
+<span class="fc" id="L67">        return dateOfBirth;</span>
     }
 
     public void setDateOfBirth(LocalDate dateOfBirth) {
-<span class="fc" id="L66">        this.dateOfBirth = dateOfBirth;</span>
-<span class="fc" id="L67">    }</span>
+<span class="fc" id="L71">        this.dateOfBirth = dateOfBirth;</span>
+<span class="fc" id="L72">    }</span>
 
     public String getPhone() {
-<span class="fc" id="L70">        return phone;</span>
+<span class="fc" id="L75">        return phone;</span>
     }
 
     public void setPhone(String phone) {
-<span class="fc" id="L74">        this.phone = phone;</span>
-<span class="fc" id="L75">    }</span>
+<span class="fc" id="L79">        this.phone = phone;</span>
+<span class="fc" id="L80">    }</span>
 
     public String getGitHubProfile() {
-<span class="fc" id="L78">        return gitHubProfile;</span>
+<span class="fc" id="L83">        return gitHubProfile;</span>
     }
 
     public void setGitHubProfile(String gitHubProfile) {
-<span class="fc" id="L82">        this.gitHubProfile = gitHubProfile;</span>
-<span class="fc" id="L83">    }</span>
+<span class="fc" id="L87">        this.gitHubProfile = gitHubProfile;</span>
+<span class="fc" id="L88">    }</span>
 
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.7.202105040129</span></div></body></html>
