--- a/coverage-report/com.learning.users.model/User.java.html
+++ b/coverage-report/com.learning.users.model/User.java.html
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="pt"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../jacoco-resources/report.css" type="text/css"/><link rel="shortcut icon" href="../jacoco-resources/report.gif" type="image/gif"/><title>User.java</title><link rel="stylesheet" href="../jacoco-resources/prettify.css" type="text/css"/><script type="text/javascript" src="../jacoco-resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=4;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../jacoco-sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">users</a> &gt; <a href="index.source.html" class="el_package">com.learning.users.model</a> &gt; <span class="el_source">User.java</span></div><h1>User.java</h1><pre class="source lang-java linenums">package com.learning.users.model;
 
-import jakarta.validation.constraints.*;
+import javax.validation.constraints.*;
 import org.hibernate.validator.constraints.URL;
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 
-<span class="fc" id="L7">public class User {</span>
+<span class="fc" id="L8">public class User {</span>
 
     private int id;
 
@@ -31,61 +32,83 @@ import java.time.LocalDate;
     @URL(message = &quot;The GitHub profile informed could not be verified as a valid one&quot;)
     private String gitHubProfile;
 
+    @PastOrPresent
+    private LocalDateTime updatedAt;
+
+    @PastOrPresent
+    private LocalDateTime deletedAt;
+
     public int getId() {
-<span class="fc" id="L35">        return id;</span>
+<span class="fc" id="L42">        return id;</span>
     }
 
     public void setId(int id) {
-<span class="fc" id="L39">        this.id = id;</span>
-<span class="fc" id="L40">    }</span>
+<span class="fc" id="L46">        this.id = id;</span>
+<span class="fc" id="L47">    }</span>
 
     public String getName() {
-<span class="fc" id="L43">        return name;</span>
+<span class="fc" id="L50">        return name;</span>
     }
 
     public void setName(String name) {
-<span class="fc" id="L47">        this.name = name;</span>
-<span class="fc" id="L48">    }</span>
+<span class="fc" id="L54">        this.name = name;</span>
+<span class="fc" id="L55">    }</span>
 
     public String getLastName() {
-<span class="fc" id="L51">        return lastName;</span>
+<span class="fc" id="L58">        return lastName;</span>
     }
 
     public void setLastName(String lastName) {
-<span class="fc" id="L55">        this.lastName = lastName;</span>
-<span class="fc" id="L56">    }</span>
+<span class="fc" id="L62">        this.lastName = lastName;</span>
+<span class="fc" id="L63">    }</span>
 
     public String getEmail() {
-<span class="fc" id="L59">        return email;</span>
+<span class="fc" id="L66">        return email;</span>
     }
 
     public void setEmail(String email) {
-<span class="fc" id="L63">        this.email = email;</span>
-<span class="fc" id="L64">    }</span>
+<span class="fc" id="L70">        this.email = email;</span>
+<span class="fc" id="L71">    }</span>
 
     public LocalDate getDateOfBirth() {
-<span class="fc" id="L67">        return dateOfBirth;</span>
+<span class="fc" id="L74">        return dateOfBirth;</span>
     }
 
     public void setDateOfBirth(LocalDate dateOfBirth) {
-<span class="fc" id="L71">        this.dateOfBirth = dateOfBirth;</span>
-<span class="fc" id="L72">    }</span>
+<span class="fc" id="L78">        this.dateOfBirth = dateOfBirth;</span>
+<span class="fc" id="L79">    }</span>
 
     public String getPhone() {
-<span class="fc" id="L75">        return phone;</span>
+<span class="fc" id="L82">        return phone;</span>
     }
 
     public void setPhone(String phone) {
-<span class="fc" id="L79">        this.phone = phone;</span>
-<span class="fc" id="L80">    }</span>
+<span class="fc" id="L86">        this.phone = phone;</span>
+<span class="fc" id="L87">    }</span>
 
     public String getGitHubProfile() {
-<span class="fc" id="L83">        return gitHubProfile;</span>
+<span class="fc" id="L90">        return gitHubProfile;</span>
     }
 
     public void setGitHubProfile(String gitHubProfile) {
-<span class="fc" id="L87">        this.gitHubProfile = gitHubProfile;</span>
-<span class="fc" id="L88">    }</span>
+<span class="fc" id="L94">        this.gitHubProfile = gitHubProfile;</span>
+<span class="fc" id="L95">    }</span>
+
+    public LocalDateTime getUpdatedAt() {
+<span class="fc" id="L98">        return updatedAt;</span>
+    }
+
+    public void setUpdatedAt(LocalDateTime updatedAt) {
+<span class="fc" id="L102">        this.updatedAt = updatedAt;</span>
+<span class="fc" id="L103">    }</span>
+
+    public LocalDateTime getDeletedAt() {
+<span class="fc" id="L106">        return deletedAt;</span>
+    }
+
+    public void setDeletedAt(LocalDateTime deletedAt) {
+<span class="fc" id="L110">        this.deletedAt = deletedAt;</span>
+<span class="fc" id="L111">    }</span>
 
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.7.202105040129</span></div></body></html>
