--- a/coverage-report/com.learning.users.repository/UserRepositoryInMemory.java.html
+++ b/coverage-report/com.learning.users.repository/UserRepositoryInMemory.java.html
@@ -1,30 +1,151 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="pt"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../jacoco-resources/report.css" type="text/css"/><link rel="shortcut icon" href="../jacoco-resources/report.gif" type="image/gif"/><title>UserRepositoryInMemory.java</title><link rel="stylesheet" href="../jacoco-resources/prettify.css" type="text/css"/><script type="text/javascript" src="../jacoco-resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=4;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../jacoco-sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">users</a> &gt; <a href="index.source.html" class="el_package">com.learning.users.repository</a> &gt; <span class="el_source">UserRepositoryInMemory.java</span></div><h1>UserRepositoryInMemory.java</h1><pre class="source lang-java linenums">package com.learning.users.repository;
 
 import com.learning.users.model.User;
-import jakarta.validation.ConstraintViolation;
-import jakarta.validation.ConstraintViolationException;
-
+import javax.validation.ConstraintViolation;
+import javax.validation.ConstraintViolationException;
+import javax.validation.Validation;
+import javax.management.openmbean.InvalidKeyException;
 import javax.management.openmbean.KeyAlreadyExistsException;
-import java.util.*;
+import java.time.LocalDateTime;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 
-<span class="fc" id="L10">public class UserRepositoryInMemory implements UserRepository{</span>
+<span class="fc" id="L16">public class UserRepositoryInMemory implements UserRepository{</span>
 
-<span class="fc" id="L12">    Map&lt;String, User&gt; mapStorage = new HashMap&lt;&gt;();</span>
+<span class="fc" id="L18">    javax.validation.Validator VALIDATOR = Validation.byDefaultProvider()</span>
+<span class="fc" id="L19">            .configure()</span>
+<span class="fc" id="L20">            .messageInterpolator(Validation.buildDefaultValidatorFactory().getMessageInterpolator())</span>
+<span class="fc" id="L21">            .buildValidatorFactory()</span>
+<span class="fc" id="L22">            .getValidator();</span>
 
+<span class="fc" id="L24">    Map&lt;String, User&gt; mapStorage = new HashMap&lt;&gt;();</span>
+
+    @Override
     public void create(User user){
-<span class="fc" id="L15">        Set&lt;ConstraintViolation&lt;User&gt;&gt; violations = VALIDATOR.validate(user);</span>
-<span class="fc bfc" id="L16" title="All 2 branches covered.">        if(!violations.isEmpty()){</span>
-<span class="fc" id="L17">            throw new ConstraintViolationException(violations);</span>
-<span class="fc bfc" id="L18" title="All 2 branches covered.">        }else if(mapStorage.containsKey(user.getEmail())){</span>
-<span class="fc" id="L19">            throw new KeyAlreadyExistsException(user.getEmail());</span>
-        }
-<span class="fc" id="L21">        int idUser = mapStorage.size() + 1;</span>
-<span class="fc" id="L22">        user.setId(idUser);</span>
-<span class="fc" id="L23">        mapStorage.put(user.getEmail(), user);</span>
-<span class="fc" id="L24">    }</span>
 
+<span class="fc" id="L29">        Set&lt;ConstraintViolation&lt;User&gt;&gt; violations = VALIDATOR.validate(user);</span>
+<span class="fc bfc" id="L30" title="All 2 branches covered.">        if(!violations.isEmpty()){</span>
+<span class="fc" id="L31">            throw new ConstraintViolationException(violations);</span>
+<span class="fc bfc" id="L32" title="All 2 branches covered.">        }else if(mapStorage.containsKey(user.getEmail())){</span>
+<span class="fc" id="L33">            throw new KeyAlreadyExistsException(user.getEmail());</span>
+        }
+
+<span class="fc" id="L36">        int idUser = mapStorage.size() + 1;</span>
+<span class="fc" id="L37">        user.setId(idUser);</span>
+<span class="fc" id="L38">        mapStorage.put(user.getEmail(), user);</span>
+<span class="fc" id="L39">        System.out.println(&quot;User created successfully.&quot;);</span>
+<span class="fc" id="L40">    }</span>
+
+    @Override
+    public void update(User user){
+
+<span class="fc" id="L45">        Set&lt;ConstraintViolation&lt;User&gt;&gt; violations = VALIDATOR.validate(user);</span>
+
+<span class="fc bfc" id="L47" title="All 2 branches covered.">        if(!violations.isEmpty()){</span>
+<span class="fc" id="L48">            throw new ConstraintViolationException(violations);</span>
+        }
+
+<span class="fc bfc" id="L51" title="All 2 branches covered.">        if(user.getId() == mapStorage.get(user.getEmail()).getId()) {</span>
+
+<span class="fc" id="L53">            User userUpd = mapStorage.get(user.getEmail());</span>
+<span class="fc" id="L54">            userUpd.setUpdatedAt(LocalDateTime.now());</span>
+<span class="fc" id="L55">            mapStorage.replace(userUpd.getEmail(), user, userUpd);</span>
+<span class="fc" id="L56">            System.out.println(&quot;User data updated successfully.&quot;);</span>
+
+<span class="fc" id="L58">        }</span>
+        else{
+
+<span class="fc" id="L61">            throw new IllegalArgumentException();</span>
+        }
+
+<span class="fc" id="L64">    }</span>
+
+    @Override
+    public void delete(User user){
+
+<span class="fc bfc" id="L69" title="All 2 branches covered.">        if(!mapStorage.containsKey(user.getEmail())) {</span>
+<span class="fc" id="L70">            throw new InvalidKeyException(user.getEmail());</span>
+        }
+<span class="fc bfc" id="L72" title="All 2 branches covered.">        else if(user.getId() != mapStorage.get(user.getEmail()).getId()){</span>
+<span class="fc" id="L73">            throw new IllegalArgumentException();</span>
+        }
+<span class="fc bfc" id="L75" title="All 2 branches covered.">        else if(mapStorage.get(user.getEmail()).getDeletedAt() != null){</span>
+<span class="fc" id="L76">            throw new IllegalArgumentException();</span>
+        }
+
+<span class="fc" id="L79">        user.setDeletedAt(LocalDateTime.now());</span>
+<span class="fc" id="L80">        mapStorage.replace(user.getEmail(), user);</span>
+<span class="fc" id="L81">        System.out.println(&quot;User &quot; + user.getEmail().toUpperCase() + &quot; was deleted successfully.&quot;);</span>
+
+<span class="fc" id="L83">    }</span>
+
+    @Override
+    public User read(String email){
+
+<span class="fc bfc" id="L88" title="All 2 branches covered.">        if(!mapStorage.containsKey(email)</span>
+<span class="fc bfc" id="L89" title="All 2 branches covered.">                || mapStorage.get(email).getDeletedAt() != null){</span>
+
+<span class="fc" id="L91">            throw new InvalidKeyException(email);</span>
+        }
+
+<span class="fc" id="L94">        return mapStorage.get(email);</span>
+
+    }
+
+    @Override
     public int count(){
-<span class="fc" id="L27">        return mapStorage.size();</span>
+
+<span class="fc" id="L101">        return mapStorage.size();</span>
+    }
+
+    /*
+    The method allows the user to find and to list users name.
+    String nameForSearching: parameter Name can be partially or fully informed.
+    int QuantityToList: parameter refers to the number of elements to be returned
+    int maxQuantity: is the maximum number of user allowed to be shown
+    defined.
+     */
+    @Override
+    public List&lt;User&gt; list(boolean active, int limitToList, String name){
+
+<span class="fc bfc" id="L114" title="All 2 branches covered.">        if(limitToList &gt; 50){</span>
+<span class="fc" id="L115">            throw new IllegalArgumentException(&quot;The maximum users requests must be 50&quot;);</span>
+        }
+
+        List&lt;User&gt; listOfUser;
+
+<span class="fc bfc" id="L120" title="All 2 branches covered.">        if(!active){</span>
+<span class="fc bfc" id="L121" title="All 2 branches covered.">            if(name.length() == 0) {</span>
+<span class="fc" id="L122">                listOfUser = mapStorage.values().stream()</span>
+<span class="fc" id="L123">                        .collect(Collectors.toList());</span>
+            }
+            else{
+<span class="fc" id="L126">                listOfUser = mapStorage.values().stream()</span>
+<span class="fc" id="L127">                        .filter(user -&gt; user.getName().contains(name))</span>
+<span class="fc" id="L128">                        .collect(Collectors.toList());</span>
+            }
+        }
+        else {
+<span class="fc bfc" id="L132" title="All 2 branches covered.">            if(name.length() &gt; 0) {</span>
+<span class="fc" id="L133">                listOfUser = mapStorage.values().stream()</span>
+<span class="fc bfc" id="L134" title="All 2 branches covered.">                        .filter(user -&gt; user.getDeletedAt() == null)</span>
+<span class="fc" id="L135">                        .filter(user -&gt; user.getName().contains(name))</span>
+<span class="fc" id="L136">                        .collect(Collectors.toList());</span>
+            }
+            else{
+<span class="fc" id="L139">                listOfUser = mapStorage.values().stream()</span>
+<span class="fc bfc" id="L140" title="All 2 branches covered.">                        .filter(user -&gt; user.getDeletedAt() == null)</span>
+<span class="fc" id="L141">                        .collect(Collectors.toList());</span>
+            }
+        }
+
+<span class="fc bfc" id="L145" title="All 2 branches covered.">        if(listOfUser.size() &gt; limitToList){</span>
+<span class="fc" id="L146">            throw new IllegalArgumentException();</span>
+        }
+<span class="fc" id="L148">        return listOfUser;</span>
     }
 
 }
