--- a/coverage-report/com.learning.users.repository/UserRepositoryInMemory.java.html
+++ b/coverage-report/com.learning.users.repository/UserRepositoryInMemory.java.html
@@ -1,105 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="pt"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../jacoco-resources/report.css" type="text/css"/><link rel="shortcut icon" href="../jacoco-resources/report.gif" type="image/gif"/><title>UserRepositoryInMemory.java</title><link rel="stylesheet" href="../jacoco-resources/prettify.css" type="text/css"/><script type="text/javascript" src="../jacoco-resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=4;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../jacoco-sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">users</a> &gt; <a href="index.source.html" class="el_package">com.learning.users.repository</a> &gt; <span class="el_source">UserRepositoryInMemory.java</span></div><h1>UserRepositoryInMemory.java</h1><pre class="source lang-java linenums">package com.learning.users.repository;
 
 import com.learning.users.model.User;
+import com.learning.users.model.UserNotFoundException;
+
 import javax.validation.ConstraintViolation;
 import javax.validation.ConstraintViolationException;
 import javax.validation.Validation;
 import javax.management.openmbean.InvalidKeyException;
 import java.time.LocalDateTime;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
-<span class="fc" id="L15">public class UserRepositoryInMemory implements UserRepository{</span>
+<span class="fc" id="L14">public class UserRepositoryInMemory implements UserRepository{</span>
 
-<span class="fc" id="L17">    javax.validation.Validator VALIDATOR = Validation.byDefaultProvider()</span>
-<span class="fc" id="L18">            .configure()</span>
-<span class="fc" id="L19">            .messageInterpolator(Validation.buildDefaultValidatorFactory().getMessageInterpolator())</span>
-<span class="fc" id="L20">            .buildValidatorFactory()</span>
-<span class="fc" id="L21">            .getValidator();</span>
+<span class="fc" id="L16">    javax.validation.Validator VALIDATOR = Validation.byDefaultProvider()</span>
+<span class="fc" id="L17">            .configure()</span>
+<span class="fc" id="L18">            .messageInterpolator(Validation.buildDefaultValidatorFactory().getMessageInterpolator())</span>
+<span class="fc" id="L19">            .buildValidatorFactory()</span>
+<span class="fc" id="L20">            .getValidator();</span>
 
-<span class="fc" id="L23">    Map&lt;Integer, User&gt; mapStorage = new HashMap&lt;&gt;();</span>
+<span class="fc" id="L22">    Map&lt;Integer, User&gt; mapStorage = new HashMap&lt;&gt;();</span>
 
     @Override
     public void create(User user){
 
-<span class="fc" id="L28">        Set&lt;ConstraintViolation&lt;User&gt;&gt; violations = VALIDATOR.validate(user);</span>
-<span class="fc bfc" id="L29" title="All 2 branches covered.">        if(!violations.isEmpty()){</span>
-<span class="fc" id="L30">            throw new ConstraintViolationException(violations);</span>
-<span class="pc bpc" id="L31" title="1 of 2 branches missed.">        }else if(mapStorage.containsKey(user.getId())){</span>
-<span class="nc" id="L32">            throw new IllegalArgumentException();</span>
-<span class="fc" id="L33">        }else if(mapStorage.values().stream()</span>
-<span class="fc bfc" id="L34" title="All 2 branches covered.">                .anyMatch(store -&gt; store.getEmail().equals(user.getEmail()))){</span>
-<span class="fc" id="L35">            throw new IllegalArgumentException();</span>
+<span class="fc" id="L27">        Set&lt;ConstraintViolation&lt;User&gt;&gt; violations = VALIDATOR.validate(user);</span>
+<span class="fc bfc" id="L28" title="All 2 branches covered.">        if(!violations.isEmpty()){</span>
+<span class="fc" id="L29">            throw new ConstraintViolationException(violations);</span>
+<span class="pc bpc" id="L30" title="1 of 2 branches missed.">        }else if(mapStorage.containsKey(user.getId())){</span>
+<span class="nc" id="L31">            throw new IllegalArgumentException();</span>
+<span class="fc" id="L32">        }else if(mapStorage.values().stream()</span>
+<span class="fc bfc" id="L33" title="All 2 branches covered.">                .anyMatch(store -&gt; store.getEmail().equals(user.getEmail()))){</span>
+<span class="fc" id="L34">            throw new IllegalArgumentException();</span>
         }
 
-<span class="fc" id="L38">        int idUser = mapStorage.size() + 1;</span>
-<span class="fc" id="L39">        user.setId(idUser);</span>
-<span class="fc" id="L40">        mapStorage.put(user.getId(), user);</span>
-<span class="fc" id="L41">        System.out.println(&quot;User created successfully.&quot;);</span>
-<span class="fc" id="L42">    }</span>
+<span class="fc" id="L37">        int idUser = mapStorage.size() + 1;</span>
+<span class="fc" id="L38">        user.setId(idUser);</span>
+<span class="fc" id="L39">        mapStorage.put(user.getId(), user);</span>
+<span class="fc" id="L40">        System.out.println(&quot;User created successfully.&quot;);</span>
+<span class="fc" id="L41">    }</span>
 
     @Override
     public void update(User user){
 
-<span class="fc" id="L47">        Set&lt;ConstraintViolation&lt;User&gt;&gt; violations = VALIDATOR.validate(user);</span>
+<span class="fc" id="L46">        Set&lt;ConstraintViolation&lt;User&gt;&gt; violations = VALIDATOR.validate(user);</span>
 
-<span class="fc bfc" id="L49" title="All 2 branches covered.">        if(!violations.isEmpty()){</span>
-<span class="fc" id="L50">            throw new ConstraintViolationException(violations);</span>
+<span class="fc bfc" id="L48" title="All 2 branches covered.">        if(!violations.isEmpty()){</span>
+<span class="fc" id="L49">            throw new ConstraintViolationException(violations);</span>
         }
 
-<span class="pc bpc" id="L53" title="1 of 2 branches missed.">        if(user.getId() == mapStorage.get(user.getId()).getId()) {</span>
+<span class="pc bpc" id="L52" title="1 of 2 branches missed.">        if(user.getId() == mapStorage.get(user.getId()).getId()) {</span>
 
-<span class="fc" id="L55">            User userUpd = mapStorage.get(user.getId());</span>
-<span class="fc" id="L56">            userUpd.setUpdatedAt(LocalDateTime.now());</span>
-<span class="fc" id="L57">            mapStorage.replace(userUpd.getId(), user, userUpd);</span>
-<span class="fc" id="L58">            System.out.println(&quot;User data updated successfully.&quot;);</span>
-
-<span class="fc" id="L60">        }</span>
+<span class="fc" id="L54">            User userUpd = mapStorage.get(user.getId());</span>
+<span class="fc" id="L55">            userUpd.setUpdatedAt(LocalDateTime.now());</span>
+<span class="fc" id="L56">            mapStorage.replace(userUpd.getId(), user, userUpd);</span>
+<span class="fc" id="L57">            System.out.println(&quot;User data updated successfully.&quot;);</span>
+<span class="fc" id="L58">        }</span>
         else{
-<span class="nc" id="L62">            throw new NullPointerException();</span>
+<span class="nc" id="L60">            throw new NullPointerException();</span>
         }
-
-<span class="fc" id="L65">    }</span>
+<span class="fc" id="L62">    }</span>
 
     @Override
     public void delete(User user){
 
-<span class="fc bfc" id="L70" title="All 2 branches covered.">        if(!mapStorage.containsKey(user.getId())) {</span>
-<span class="fc" id="L71">            throw new InvalidKeyException();</span>
+<span class="fc bfc" id="L67" title="All 2 branches covered.">        if(!mapStorage.containsKey(user.getId())) {</span>
+<span class="fc" id="L68">            throw new InvalidKeyException();</span>
         }
-<span class="pc bpc" id="L73" title="1 of 2 branches missed.">        else if(user.getId() != mapStorage.get(user.getId()).getId()){</span>
-<span class="nc" id="L74">            throw new IllegalArgumentException();</span>
+<span class="pc bpc" id="L70" title="1 of 2 branches missed.">        else if(user.getId() != mapStorage.get(user.getId()).getId()){</span>
+<span class="nc" id="L71">            throw new IllegalArgumentException();</span>
         }
-<span class="fc bfc" id="L76" title="All 2 branches covered.">        else if(mapStorage.get(user.getId()).getDeletedAt() != null){</span>
-<span class="fc" id="L77">            throw new IllegalArgumentException();</span>
+<span class="fc bfc" id="L73" title="All 2 branches covered.">        else if(mapStorage.get(user.getId()).getDeletedAt() != null){</span>
+<span class="fc" id="L74">            throw new IllegalArgumentException();</span>
         }
 
-<span class="fc" id="L80">        user.setDeletedAt(LocalDateTime.now());</span>
-<span class="fc" id="L81">        mapStorage.replace(user.getId(), user);</span>
-<span class="fc" id="L82">        System.out.println(&quot;User &quot; + user.getId() + &quot; was deleted successfully.&quot;);</span>
+<span class="fc" id="L77">        user.setDeletedAt(LocalDateTime.now());</span>
+<span class="fc" id="L78">        mapStorage.replace(user.getId(), user);</span>
+<span class="fc" id="L79">        System.out.println(&quot;User &quot; + user.getId() + &quot; was deleted successfully.&quot;);</span>
 
-<span class="fc" id="L84">    }</span>
+<span class="fc" id="L81">    }</span>
 
     @Override
     public User read(int id){
 
-<span class="fc bfc" id="L89" title="All 2 branches covered.">        if(!mapStorage.containsKey(id)</span>
-<span class="fc bfc" id="L90" title="All 2 branches covered.">                || mapStorage.get(id).getDeletedAt() != null){</span>
+<span class="fc bfc" id="L86" title="All 2 branches covered.">        if(!mapStorage.containsKey(id)</span>
+<span class="fc bfc" id="L87" title="All 2 branches covered.">                || mapStorage.get(id).getDeletedAt() != null){</span>
 
-<span class="fc" id="L92">            throw new InvalidKeyException();</span>
+<span class="fc" id="L89">            throw new InvalidKeyException();</span>
         }
-
-<span class="fc" id="L95">        return mapStorage.get(id);</span>
-
+<span class="fc" id="L91">        return mapStorage.get(id);</span>
     }
 
     @Override
     public int count(){
 
-<span class="fc" id="L102">        return mapStorage.size();</span>
+<span class="fc" id="L97">        return mapStorage.size();</span>
     }
 
     /*
@@ -112,42 +107,58 @@ import java.util.stream.Collectors;
     @Override
     public List&lt;User&gt; list(boolean active, int limitToList, String name){
 
-<span class="fc bfc" id="L115" title="All 2 branches covered.">        if(limitToList &gt; 50){</span>
-<span class="fc" id="L116">            throw new IllegalArgumentException(&quot;The maximum users requests must be 50&quot;);</span>
+<span class="fc bfc" id="L110" title="All 2 branches covered.">        if(limitToList &gt; 50){</span>
+<span class="fc" id="L111">            throw new IllegalArgumentException(&quot;The maximum users requests must be 50&quot;);</span>
         }
 
         List&lt;User&gt; listOfUser;
 
-<span class="fc bfc" id="L121" title="All 2 branches covered.">        if(!active){</span>
-<span class="fc bfc" id="L122" title="All 2 branches covered.">            if(name.length() == 0) {</span>
-<span class="fc" id="L123">                listOfUser = mapStorage.values().stream()</span>
-<span class="fc" id="L124">                        .collect(Collectors.toList());</span>
+<span class="fc bfc" id="L116" title="All 2 branches covered.">        if(!active){</span>
+<span class="fc bfc" id="L117" title="All 2 branches covered.">            if(name.length() == 0) {</span>
+<span class="fc" id="L118">                listOfUser = mapStorage.values().stream()</span>
+<span class="fc" id="L119">                        .collect(Collectors.toList());</span>
             }
             else{
-<span class="fc" id="L127">                listOfUser = mapStorage.values().stream()</span>
-<span class="fc" id="L128">                        .filter(user -&gt; user.getName().contains(name))</span>
-<span class="fc" id="L129">                        .collect(Collectors.toList());</span>
+<span class="fc" id="L122">                listOfUser = mapStorage.values().stream()</span>
+<span class="fc" id="L123">                        .filter(user -&gt; user.getName().contains(name))</span>
+<span class="fc" id="L124">                        .collect(Collectors.toList());</span>
             }
         }
         else {
-<span class="fc bfc" id="L133" title="All 2 branches covered.">            if(name.length() &gt; 0) {</span>
-<span class="fc" id="L134">                listOfUser = mapStorage.values().stream()</span>
-<span class="fc bfc" id="L135" title="All 2 branches covered.">                        .filter(user -&gt; user.getDeletedAt() == null)</span>
-<span class="fc" id="L136">                        .filter(user -&gt; user.getName().contains(name))</span>
-<span class="fc" id="L137">                        .collect(Collectors.toList());</span>
+<span class="fc bfc" id="L128" title="All 2 branches covered.">            if(name.length() &gt; 0) {</span>
+<span class="fc" id="L129">                listOfUser = mapStorage.values().stream()</span>
+<span class="fc bfc" id="L130" title="All 2 branches covered.">                        .filter(user -&gt; user.getDeletedAt() == null)</span>
+<span class="fc" id="L131">                        .filter(user -&gt; user.getName().contains(name))</span>
+<span class="fc" id="L132">                        .collect(Collectors.toList());</span>
             }
             else{
-<span class="fc" id="L140">                listOfUser = mapStorage.values().stream()</span>
-<span class="fc bfc" id="L141" title="All 2 branches covered.">                        .filter(user -&gt; user.getDeletedAt() == null)</span>
-<span class="fc" id="L142">                        .collect(Collectors.toList());</span>
+<span class="fc" id="L135">                listOfUser = mapStorage.values().stream()</span>
+<span class="fc bfc" id="L136" title="All 2 branches covered.">                        .filter(user -&gt; user.getDeletedAt() == null)</span>
+<span class="fc" id="L137">                        .collect(Collectors.toList());</span>
             }
         }
 
-<span class="fc bfc" id="L146" title="All 2 branches covered.">        if(listOfUser.size() &gt; limitToList){</span>
-<span class="fc" id="L147">            throw new IllegalArgumentException();</span>
+<span class="fc bfc" id="L141" title="All 2 branches covered.">        if(listOfUser.size() &gt; limitToList){</span>
+<span class="fc" id="L142">            throw new IllegalArgumentException();</span>
         }
-<span class="fc" id="L149">        return listOfUser;</span>
+<span class="fc" id="L144">        return listOfUser;</span>
     }
 
+    @Override
+    public User searchById(int id){
+
+<span class="pc bpc" id="L150" title="2 of 4 branches missed.">        if(mapStorage.values().stream().filter(user -&gt; user.getId() == id).count() == 0){</span>
+<span class="nc" id="L151">            throw new UserNotFoundException(id);</span>
+        }
+
+<span class="fc" id="L154">        User user = new User();</span>
+
+<span class="fc bfc" id="L156" title="All 2 branches covered.">        for (Map.Entry&lt;Integer, User&gt; entry : mapStorage.entrySet()) {</span>
+<span class="pc bpc" id="L157" title="1 of 2 branches missed.">            if (entry.getKey().equals(entry.getValue().getId())) {</span>
+<span class="fc" id="L158">                user = mapStorage.get(entry.getKey());</span>
+            }
+<span class="fc" id="L160">        }</span>
+<span class="fc" id="L161">        return user;</span>
+    }
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.7.202105040129</span></div></body></html>
